# foxdie

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yml
src/foxdie/: Cargo.toml
src/foxdie/src/: cli.rs  error.rs  main.rs
src/foxdie/src/actions/: local.rs  mod.rs  push_requests.rs  report.rs
src/foxdie/src/services/: mod.rs
src/foxdie/src/services/git/: mod.rs
src/foxdie/src/services/github/: mod.rs  v3.rs
src/foxdie/src/services/gitlab/: mod.rs  v4.rs
src/foxdie_actions/: Cargo.toml
src/foxdie_actions/src/: error.rs  lib.rs
src/foxdie_actions/src/actions/: local.rs  push_requests.rs  report.rs
src/foxdie_services/: Cargo.toml
src/foxdie_services/src/: lib.rs
src/foxdie_services/src/git/: mod.rs
src/foxdie_services/src/github/: mod.rs  v3.rs
src/foxdie_services/src/gitlab/: mod.rs  v4.rs
src/what_git/: Cargo.toml
src/what_git/src/: lib.rs
