[package]
name = "foxdie"
version = "0.6.0"
authors = ["Aaron Sky <asky@wayfair.com>"]
edition = "2018"
description = "A super-fast tool for taking stale branches and push requests and deleting and/or closing them."
license = "BSD-2-Clause"
documentation = "https://docs.rs/foxdie"
homepage = "https://github.com/wayfair/foxdie"
repository = "https://github.com/wayfair/foxdie"

[dependencies]
async-std = "1.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
env_logger = "0.8"
git2 = "0.13"
glob = "0.3"
log = "0.4"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
what_git = { path = "../what_git" }
