[package]
name = "foxdie_actions"
version = "0.5.0"
authors = ["Aaron Sky <asky@wayfair.com>"]
edition = "2018"
publish = false

[lib]
name = "foxdie_actions"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
foxdie_services = {  version = "0.5.0", path = "../foxdie_services" }
