[package]
name = "foxdie_services"
version = "0.5.0"
authors = ["Aaron Sky <asky@wayfair.com>"]
edition = "2018"
publish = false

[lib]
name = "foxdie_services"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.9"
glob = "0.3"
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
what_git = { version = "0.5.0", path = "../what_git" }
url = "1.7.2"
