[package]
name = "what_git"
version = "0.6.0"
authors = ["Aaron Sky <asky@wayfair.com>"]
edition = "2018"
description = "A crate for determining which SCM your Git URL is associated with."
license = "BSD-2-Clause"
documentation = "https://docs.rs/what_git"
homepage = "https://github.com/wayfair/foxdie"
repository = "https://github.com/wayfair/foxdie"

[dependencies]
reqwest = "0.10"
